# campaign-manager

./: .gitignore  PLAN.md  PROMPT.md  README.md  SPEC.md  WALKTHROUGH.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: auth.py  config.py  main.py
app/compiler/: __init__.py  compiler.py  dag.py  pipeline.py
app/compiler/tests/: test_compiler.py  test_pipeline.py
app/components/: analytics_panel.py  campaign_table.py  cytoscape_editor.py  info_panel.py  logic_panel.py  navbar.py  properties.py  step_forms.py
app/pages/: audit.py  campaign.py  home.py
app/services/: ai_cron.py  columns.py  demo_seed.py  genie.py  jobs.py  lakebase.py  metadata.py  runner.py  uc.py  uploads.py
data/: pipeline_runner.py  seed_demo.py  synthetic_data_gen.py
resources/: app.yml  catalog.yml  job_pipeline_runner.yml  job_synthetic_data.yml
scripts/: bootstrap.sh
